Fix large gap between grid post items

--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -3,10 +3,20 @@
  */
 
 .layout-grid.posts-wrap {
-    @apply sm:flex sm:flex-wrap sm:items-start sm:justify-between;
+    @apply sm:flex sm:flex-wrap sm:items-start;
 
     > .post-wrap {
-        @apply mt-4 first:mt-0 sm:w-[49%] lg:w-[32.5%] /*2xl:w-[24.35%]*/;
+        @apply mt-4
+            first:mt-0
+            sm:w-[49%]
+            sm:odd:mr-[1.9%]
+            lg:w-[32.5%]
+            lg:odd:mr-[1.2%]
+            lg:mr-[1.2%];
+
+        &:nth-child(3n) {
+            @apply lg:mr-0;
+        }
 
         &:nth-child(2) {
             @apply sm:mt-0;
@@ -15,10 +25,6 @@
         &:nth-child(3) {
             @apply lg:mt-0;
         }
-
-        /* &:nth-child(4) {
-            @apply 2xl:mt-0;
-        } */
 
         &.big > header > .entry-title {
             @apply text-[1.43em];
